[tool.poetry]
name = "noita_saves"
version = "0.1.0"
description = ""
authors = ["Kyle Oliver <oliverke@mail.uc.edu>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
click = "^8.1.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
noita = "src.cli:cli"
